<resources>
    <string name="app_name">SimplerEnglishApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_start_screens">Skip</string>
    <string name="start_first_screen_title">Better way to learning is calling you!</string>
    <string name="start_first_screen_description">Learn anytime, anywhere.</string>
    <string name="start_second_screen_title">Find yourself doing what you love!</string>
    <string name="start_second_screen_description">Learn, progress and get better.</string>
    <string name="start_third_screen_title">It\'s not just learning This is a promise!</string>
    <string name="start_third_screen_description">Using our application you will master the language in the shortest possible time.</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back! Sign in to continue!</string>
    <string name="google">Login in with Google</string>
    <string name="login_in">Login in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="Dont_have_an_account">Don’t have an account?</string>
    <string name="or_login_with">Or login with</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Password</string>
    <string name="ener_your_password">Ener your password</string>
    <string name="ener_your_email">Ener your email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="your_user_name">Your Username</string>
    <string name="ener_your_username">Enter your username</string>
    <string name="free_sign_up_message"><![CDATA[Enter your details below & free sign up]]></string>
    <string name="your_number">Your number</string>
    <string name="ener_your_number">Enter your number</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="continue_">Continue</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="another_number">Another number?</string>
    <string name="submit_new_code">Submit new code</string>
</resources>