<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSignUp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <TextView
        android:id="@+id/textView5"
        style="@style/login_screens_title_text_view_style"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        style="@style/card_view_login_screens_style"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline20">

        <EditText
            android:id="@+id/username_edit_text"
            style="@style/login_screens_edit_text_style"
            android:hint="@string/ener_your_username"
            android:inputType="textPersonName" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/card_view_login_screens_style"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline22">

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/login_screens_edit_text_style"
            android:hint="@string/ener_your_email"
            android:inputType="textEmailAddress" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <Button
        android:id="@+id/sign_up_button"
        style="@style/ButtonStyle.Blue"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.26034063" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />

    <TextView
        android:id="@+id/login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/login"
        android:textColor="@color/app_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.64" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/your_user_name"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline17" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/your_email"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline17" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/your_password"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintStart_toStartOf="@+id/guideline17" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        style="@style/card_view_login_screens_style"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline26">

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/login_screens_edit_text_style"
            android:hint="@string/ener_your_password"
            android:inputType="textPassword" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/free_sign_up_message"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>