<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin">

    <Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar_transparent_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.95" />
\

    <TextView
        style="@style/login_screens_title_text_view_style"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        style="@style/card_view_login_screens_style"
        app:layout_constraintBottom_toTopOf="@+id/guideline21"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline20">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/ener_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/card_view_login_screens_style"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline22">

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/ener_your_password"
            android:inputType="textPassword"
            android:paddingStart="12dp" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <Button
        android:id="@+id/login_in_button"
        style="@style/ButtonStyle.Blue"
        android:text="@string/login_in"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        style="@style/Guideline_Horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_google_button"
        style="@style/ButtonStyle.White"
        android:drawableLeft="@drawable/ic_platform_google"
        android:paddingStart="18dp"
        android:text="@string/google"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/guideline26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.26034063" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/app_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Dont_have_an_account"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/sign_up"
        android:textColor="@color/app_color"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <View
        android:id="@+id/nameLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or_login_with"
        app:layout_constraintEnd_toStartOf="@+id/guideline31"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        style="@style/Guideline_Vertical"
        app:layout_constraintGuide_percent="0.64" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/guideline18"
        app:layout_constraintStart_toStartOf="@+id/guideline31"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/your_email"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintStart_toStartOf="@+id/guideline17" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/your_password"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="@+id/guideline17" />

</androidx.constraintlayout.widget.ConstraintLayout>