<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentThirdStart">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="37dp" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/start_screens_image_view_style"
        android:layout_marginTop="68dp"
        android:src="@drawable/ic_illustration_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView2"
        style="@style/start_screens_title_text_view_style"
        android:text="@string/start_third_screen_title"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        style="@style/start_screens_description_text_view_style"
        android:text="@string/start_third_screen_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_navigation_third"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positive_button"
        style="@style/ButtonStyle.Blue"
        android:layout_marginTop="84dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        style="@style/ButtonStyle.White"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/app_color"
        app:layout_constraintBottom_toBottomOf="@+id/positive_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/positive_button"
        app:layout_constraintTop_toTopOf="@+id/positive_button" />

</androidx.constraintlayout.widget.ConstraintLayout>